WIP: Convert users of Optional.get()
Upgraded modernized plugin is finding these, fix them up.

// FIXME: more fixes
// FIXME: revise fixes to use childByArg() where appropriate
// FIXME: split test changes into a separate patch

Change-Id: If1f898f3e12e730e8084cca9689f94949c53c852
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>